<resources>
    <string name="app_name">TestProject</string>
    <string name="please_select_to_start_work_additional">PLEASE SELECT TO START WORK (ADDITIONAL)</string>
    <string name="operator">Operator</string>
    <string name="name_of_operator">Name Of Operator</string>
    <string name="other_name">Other Name</string>
    <string name="customer">Customer</string>
    <string name="name_of_customer">Name Of Customer</string>
    <string name="another_name_of">Another Name Of</string>
    <string name="farm">Farm</string>
    <string name="farm_name">Farm Name</string>
    <string name="field">Field</string>
    <string name="field_name">Field Name</string>
    <string name="name_of_a_field">Name Of A Field</string>
    <string name="field_n_1">Field N 1</string>
    <string name="name_of_a_farm">Name Of A Farm</string>
    <string name="save">Save</string>
    <string name="archive">ARCHIVE</string>
    <string name="home">HOME</string>
    <string name="settings">SETTINGS</string>
    <string name="moisture">MOISTURE</string>
    <string name="dm">DM</string>
    <string name="as_is">AS IS</string>
    <string name="n_a">N/A</string>
    <string name="sensor_status">Sensor Status</string>
    <string name="crop">Crop</string>
    <string name="optional">OPTIONAL</string>
    <string name="wifi">Wifi</string>
    <string name="play">Play</string>
    <string name="status">SENSOR STATUS:</string>
    <string name="ready">READY</string>
    <string name="to_get_started_please_select_the_missing_parameters">TO GET STARTED, PLEASE SELECT THE MISSING PARAMETERS</string>
    <string name="go_to_additional">GO TO ADDITIONAL</string>
    <string name="filter">Filter</string>
    <string name="delete">Delete</string>
    <string name="reports">Reports</string>
    <string name="by_date">by Date</string>
    <string name="by_crop">by Crop</string>
    <string name="by_operator">by Operator</string>
    <string name="select_date">Select date</string>
    <string name="from">From:</string>
    <string name="manual_stop_of_the_analysis">Manual stop of the analysis</string>
    <string name="type_of_analysis">TYPE OF ANALYSIS</string>
    <string name="automatic_stop_of_the_analysis">Automatic stop of the analysis</string>
    <string name="analysis_by_samples">Analysis by samples</string>
    <string name="sample_id">Sample ID:</string>
    <string name="please_enter">Please enter</string>
    <string name="support">SUPPORT</string>
    <string name="verify_versions">Verify versions</string>
    <string name="verify_serial_number_of_the_evonir">Verify serial number of the Evonir</string>
    <string name="download_raspberry_logs">Download raspberry logs</string>
    <string name="send_logs_with_email">Send LOGS with email</string>
    <string name="send_samples_with_email">Send SAMPLES with email</string>
    <string name="field_trace">FIELD TRACE</string>
    <string name="download_program">Download program</string>
    <string name="sign_up">Sign up</string>
    <string name="general_info">General Info</string>
    <string name="value">Value</string>
    <string name="dry_alfalfa">Dry alfalfa</string>
    <string name="_40">40</string>
    <string name="number_of_samples">Number of Samples</string>
    <string name="_3">3</string>
    <string name="total_time">Total Time</string>
    <string name="_00_50">00:50</string>
    <string name="please_select_the_missing_parameters_to_get_started">Please select the missing parameters to get started</string>
    <string name="go_to_optional">GO TO OPTIONAL</string>
    <string name="name_of_spectra">Name of Spectra</string>
    <string name="_100">100</string>
</resources>