<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/james">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <ImageView
        android:id="@+id/rootImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_root"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/please_select_to_start_work_additional"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintTop_toTopOf="@id/marginTop"
        app:layout_constraintBottom_toBottomOf="@id/marginBottom"/>

    <TextView
        android:id="@+id/tvPleaseSelectToStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/please_select_to_start_work_additional"
        android:textColor="@color/dark"
        android:textScaleX="0.9"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/rootImageView"
        app:layout_constraintEnd_toEndOf="@id/rootImageView"
        app:layout_constraintTop_toTopOf="@id/rootImageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginTextStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <TextView
        android:id="@+id/tvOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/operator"
        android:textColor="@color/dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/marginTextStart"
        app:layout_constraintTop_toBottomOf="@id/tvPleaseSelectToStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginRadioGroupStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <RadioGroup
        android:id="@+id/rgOperator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/marginRadioGroupStart"
        app:layout_constraintTop_toBottomOf="@id/tvOperator">

        <RadioButton
            android:id="@+id/rbOperator1"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:buttonTint="@color/dark"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/name_of_operator" />

        <RadioButton
            android:id="@+id/rbOperator2"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:buttonTint="@color/dark"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/other_name" />
    </RadioGroup>


    <TextView
        android:id="@+id/tvCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/customer"
        android:textColor="@color/dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/marginTextStart"
        app:layout_constraintTop_toBottomOf="@id/rgOperator" />

    <RadioGroup
        android:id="@+id/rgCustomer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/marginRadioGroupStart"
        app:layout_constraintTop_toBottomOf="@id/tvCustomer">

        <RadioButton
            android:id="@+id/rbCustomer1"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:buttonTint="@color/dark"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/name_of_customer" />

        <RadioButton
            android:id="@+id/rbCustomer2"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:buttonTint="@color/dark"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/another_name_of" />
    </RadioGroup>


    <TextView
        android:id="@+id/tvFarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/farm"
        android:textColor="@color/dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/marginTextStart"
        app:layout_constraintTop_toBottomOf="@id/rgCustomer" />

    <RadioGroup
        android:id="@+id/rgFarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/marginRadioGroupStart"
        app:layout_constraintTop_toBottomOf="@id/tvFarm">

        <RadioButton
            android:id="@+id/rbFarm1"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:buttonTint="@color/dark"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/farm_name" />

        <RadioButton
            android:id="@+id/rbFarm2"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:buttonTint="@color/dark"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/name_of_a_farm" />
    </RadioGroup>


    <TextView
        android:id="@+id/tvField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/field"
        android:textColor="@color/dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/marginTextStart"
        app:layout_constraintTop_toBottomOf="@id/rgFarm" />

    <RadioGroup
        android:id="@+id/rgField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/marginRadioGroupStart"
        app:layout_constraintTop_toBottomOf="@id/tvField">

        <RadioButton
            android:id="@+id/rbField1"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:buttonTint="@color/dark"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/field_name" />

        <RadioButton
            android:id="@+id/rbField2"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:buttonTint="@color/dark"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/name_of_a_field" />

        <RadioButton
            android:id="@+id/rbField3"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:buttonTint="@color/dark"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/field_n_1" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvSampleID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/sample_id"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/marginTextStart"
        app:layout_constraintTop_toBottomOf="@+id/rgField" />

    <EditText
        android:id="@+id/etSampleID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Please enter"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:hint="@string/please_enter"
        app:layout_constraintBottom_toBottomOf="@id/tvSampleID"
        app:layout_constraintEnd_toStartOf="@id/swOnOffSampleID"
        app:layout_constraintStart_toEndOf="@id/tvSampleID"
        app:layout_constraintTop_toTopOf="@id/tvSampleID" />

    <com.kyleduo.switchbutton.SwitchButton
        android:id="@+id/swOnOffSampleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/MySwitch"
        app:kswThumbColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tvSampleID"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toEndOf="@id/etSampleID"
        app:layout_constraintTop_toTopOf="@id/tvSampleID" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@id/rootImageView"
        app:layout_constraintEnd_toEndOf="@id/rootImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>