<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:id="@+id/table1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:divider="@drawable/table_divider"
    android:showDividers="middle"
    android:stretchColumns="*"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="@dimen/base_column_height"
        android:background="@color/black1"
        android:gravity="center"
        android:text="@string/moisture"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TableRow
        android:divider="@drawable/table_divider"
        android:showDividers="middle">

        <TextView
            android:layout_height="@dimen/base_column_height"
            android:background="@color/black1"
            android:gravity="center"
            android:text="@string/dm"
            android:textColor="@color/white" />

        <TextView
            android:layout_height="@dimen/base_column_height"
            android:background="@color/black1"
            android:gravity="center"
            android:text="@string/as_is"
            android:textColor="@color/white" />
    </TableRow>

    <TableRow
        android:divider="@drawable/table_divider"
        android:showDividers="middle">

        <TextView
            android:layout_height="@dimen/large_column_height"
            android:background="@color/black1"
            android:gravity="center"
            android:text="@string/n_a"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_height="@dimen/large_column_height"
            android:background="@color/black1"
            android:gravity="center"
            android:text="@string/n_a"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </TableRow>
</TableLayout>
