<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_actionbar"
    android:layout_width="match_parent"
    android:layout_height="?android:actionBarSize"
    tools:background="@color/black1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/ib_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_sort_24"
            android:contentDescription="@string/filter"
            tools:backgroundTint="@color/black1"
            app:layout_constraintTop_toTopOf="@id/constraint"
            app:layout_constraintBottom_toBottomOf="@id/constraint"
            app:layout_constraintStart_toStartOf="@id/constraint"/>

        <TextView
            android:id="@+id/tv_reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reports"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/constraint"
            app:layout_constraintBottom_toBottomOf="@id/constraint"
            app:layout_constraintStart_toEndOf="@id/ib_filter"/>

        <ImageButton
            android:id="@+id/ib_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/xmlid"
            app:layout_constraintTop_toTopOf="@id/constraint"
            tools:backgroundTint="@color/black1"
            app:layout_constraintBottom_toBottomOf="@id/constraint"
            app:layout_constraintStart_toEndOf="@id/tv_reports"
            android:contentDescription="@string/delete" />

        <ImageButton
            android:id="@+id/ib_usb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/usb"
            tools:backgroundTint="@color/black1"
            app:layout_constraintTop_toTopOf="@id/constraint"
            app:layout_constraintBottom_toBottomOf="@id/constraint"
            app:layout_constraintStart_toEndOf="@id/ib_delete" />

        <!--<ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.appbar.MaterialToolbar>