<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/james">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <ImageButton
        android:id="@+id/buttonSensorStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:contentDescription="@string/sensor_status"
        android:src="@drawable/group"
        app:layout_constraintEnd_toStartOf="@+id/button_crop"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toTopOf="@id/margin_top"
        app:layout_constraintWidth_percent="0.1" />

    <ImageButton
        android:id="@+id/button_crop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:contentDescription="@string/crop"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSensorStatus"
        app:layout_constraintEnd_toStartOf="@+id/ibByOperator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/buttonSensorStatus"
        app:layout_constraintTop_toTopOf="@+id/margin_top"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/tv_crop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crop"
        android:textColor="@color/dark"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/iv_crop"
        app:layout_constraintStart_toStartOf="@id/button_crop"
        app:layout_constraintTop_toTopOf="@id/button_crop"
        app:layout_constraintBottom_toBottomOf="@id/button_crop"/>

    <ImageView
        android:id="@+id/iv_crop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/crop"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tv_crop"
        app:layout_constraintTop_toTopOf="@id/button_crop"
        app:layout_constraintBottom_toBottomOf="@id/button_crop"
        app:layout_constraintEnd_toEndOf="@id/button_crop" />

    <ImageButton
        android:id="@+id/ibByOperator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:contentDescription="@string/optional"
        app:layout_constraintEnd_toStartOf="@+id/buttonWiFi"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/button_crop"
        app:layout_constraintTop_toTopOf="@id/margin_top"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/tv_optional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optional"
        android:textColor="@color/dark"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/ibByOperator"
        app:layout_constraintBottom_toBottomOf="@id/ibByOperator"
        app:layout_constraintEnd_toStartOf="@+id/iv_optional"
        app:layout_constraintStart_toStartOf="@id/ibByOperator" />

    <ImageView
        android:id="@+id/iv_optional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/optional"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/ibByOperator"
        app:layout_constraintBottom_toBottomOf="@id/ibByOperator"
        app:layout_constraintEnd_toEndOf="@id/ibByOperator"
        app:layout_constraintStart_toEndOf="@+id/tv_optional" />

    <ImageButton
        android:id="@+id/buttonWiFi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:contentDescription="@string/optional"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        android:src="@drawable/wifi"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/ibByOperator"
        app:layout_constraintTop_toTopOf="@id/margin_top"
        app:layout_constraintWidth_percent="0.1" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/buttonSensorStatus"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linear_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>